Renamed sleep_day to sleep_recent

--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -18,7 +18,7 @@
         {% card_feeding_last_method object %}
         {% card_feeding_day object %}
         {% card_statistics object %}
-        {% card_sleep_day object %}
+        {% card_sleep_recent object %}
         {% card_sleep_naps_day object %}
         {% card_tummytime_day object %}
         {% card_diaperchange_types object %}
