Rename Today's Sleep to Recent Sleep in dashboard

--- a/dashboard/templates/cards/sleep_recent.html
+++ b/dashboard/templates/cards/sleep_recent.html
@@ -3,7 +3,7 @@
 
 {% block header %}
     <a href="{% url "core:sleep-list" %}">
-        {% trans "Today's Sleep" %}
+        {% trans "Recent Sleep" %}
     </a>
 {% endblock %}
 
