--- a/core/templates/core/child_radio_option.html
+++ b/core/templates/core/child_radio_option.html
@@ -2,7 +2,8 @@
 
 {% if widget.wrap_label %}
     <label{% if widget.attrs.id %}
-        for="{{ widget.attrs.id }}"{% endif %}>{% endif %}{% include "django/forms/widgets/input.html" %}
+        for="{{ widget.attrs.id }}"{% endif %}
+        class="btn btn-outline-light btn-no-hover">{% endif %}{% include "django/forms/widgets/input.html" %}
 {% if widget.wrap_label %}
     {% include "core/child_thumbnail.html" with child=widget %}
     {{ widget.label }}</label>{% endif %}
