✨ applies new child selection widget to all forms
filters out blank option for timer form as it does not really
make sense to allow user to select no child

--- a/core/templates/core/child_radio.html
+++ b/core/templates/core/child_radio.html
@@ -2,7 +2,9 @@
     <div{% if id %} id="{{ id }}"{% endif %} class="btn-group btn-group-toggle" data-toggle="buttons">
         {% for group, options, index in widget.optgroups %}
             {% for option in options %}
+                {% if option.value != '' %}
                 {% include option.template_name with widget=option %}
+                {% endif %}
             {% endfor %}
         {% endfor %}
     </div>{% endwith %}
