--- a/babybuddy/templates/babybuddy/form_field.html
+++ b/babybuddy/templates/babybuddy/form_field.html
@@ -5,7 +5,7 @@
         {{ field.label }}
     {% endif %}
 </label>
-<div class="col-sm-10">
+<div class="col-sm-10 overflow-auto">
     {% if field|field_type == "booleanfield" %}
         <div class="btn-group-toggle" data-toggle="buttons">
             <label for="id_{{ field.name }}" class="btn btn-outline-light btn-no-hover{% if field.value %} active{% endif %}">
