--- a/core/templates/core/child_radio_option.html
+++ b/core/templates/core/child_radio_option.html
@@ -1,9 +1,10 @@
 {% load imagekit static %}
 
 {% if widget.wrap_label %}
-    <label{% if widget.attrs.id %}
-        for="{{ widget.attrs.id }}"{% endif %}
-        class="btn btn-outline-light btn-no-hover">{% endif %}{% include "django/forms/widgets/input.html" %}
+    <label{% if widget.attrs.id %} for="{{ widget.attrs.id }}"{% endif %} class="btn btn-outline-light btn-no-hover">
+{% endif %}
+{% include "django/forms/widgets/input.html" %}
 {% if widget.wrap_label %}
     {% include "core/child_thumbnail.html" with child=widget %}
-    {{ widget.label }}</label>{% endif %}
+    {{ widget.label }}</label>
+{% endif %}
