--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -1,11 +1,13 @@
 {% extends 'babybuddy/page.html' %}
-{% load cards i18n %}
+{% load breadcrumb cards i18n %}
 
 {% block title %}{% trans "Dashboard" %} - {{ object }}{% endblock %}
 
 {% block breadcrumbs %}
     <li class="breadcrumb-item"><a href="{% url 'core:child-list' %}">{% trans "Children" %}</a></li>
-    <li class="breadcrumb-item font-weight-bold"><a href="{% url 'core:child' object.slug %}">{{ object }}</a></li>
+    <li class="breadcrumb-item font-weight-bold">
+        {% child_quick_switch object 'dashboard:dashboard-child' %}
+    </li>
     <li class="breadcrumb-item active" aria-current="page">{% trans "Dashboard" %}</li>
 {% endblock %}
 
