Add mechanism for site wide settings
The two settings properties introduced here are not yet used.

--- a/babybuddy/templates/babybuddy/nav-dropdown.html
+++ b/babybuddy/templates/babybuddy/nav-dropdown.html
@@ -336,6 +336,8 @@
                                 <h6 class="dropdown-header">{% trans "Site" %}</h6>
                                 <a href="{% url 'api:api-root' %}" class="dropdown-item">{% trans "API Browser" %}</a>
                                 {% if request.user.is_staff %}
+                                    <a href="{% url 'babybuddy:site-settings-update' %}"
+                                       class="dropdown-item">{% trans "Settings" %}</a>
                                     <a href="{% url 'babybuddy:user-list' %}"
                                        class="dropdown-item">{% trans "Users" %}</a>
                                     <a href="{% url 'admin:index' %}"
