--- a/babybuddy/templates/babybuddy/user_settings_form.html
+++ b/babybuddy/templates/babybuddy/user_settings_form.html
@@ -78,10 +78,16 @@
             <fieldset>
                 <legend>{% trans "API" %}</legend>
                 <div class="form-group row">
-                    <label for="id_email" class="col-sm-2 col-form-label">{% trans "Key" %}</label>
+                    <label class="col-sm-2 col-form-label">{% trans "Key" %}</label>
                     <div class="col-sm-10">
                         <samp>{{ user.settings.api_key }}</samp>
                         <input type="submit" name="api_key_regenerate" value="{% trans "Regenerate" %}" class="btn btn-danger btn-xs" />
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">{% trans "Login QR code" %}</label>
+                    <div class="col-sm-10">
+                        <img src="data:image/png;base64,{{ login_qr_code_png }}">
                     </div>
                 </div>
             </fieldset>
