--- a/babybuddy/templates/babybuddy/user_settings_form.html
+++ b/babybuddy/templates/babybuddy/user_settings_form.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load i18n widget_tweaks %}
+{% load i18n widget_tweaks babybuddy_tags %}
 
 {% block title %}{% trans "User Settings" %}{% endblock %}
 
@@ -87,7 +87,12 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">{% trans "Login QR code" %}</label>
                     <div class="col-sm-10">
-                        <img src="data:image/png;base64,{{ login_qr_code_png }}">
+                        {% url 'babybuddy:root-router' as relative_root_url %}
+                        {% make_absolute_url relative_root_url as absolute_root_url %}
+                        
+                        <img src="{% qrcodepng stripwhitespace %}
+                            BABYBUDDY-LOGIN:{"url":"{{ absolute_root_url }}","api_key":"{{ user.settings.api_key }}"}
+                        {% endqrcodepng %}">
                     </div>
                 </div>
             </fieldset>
