--- a/babybuddy/templates/babybuddy/user_settings_form.html
+++ b/babybuddy/templates/babybuddy/user_settings_form.html
@@ -87,7 +87,7 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">{% trans "Login QR code" %}</label>
                     <div class="col-sm-10">
-                        <div style="display:inline-block;background-color:white;">
+                        <div style="display:inline-block;background-color:white;" data-qr-code-content="{{ qr_code_data }}">
                             {% qr_from_text qr_code_data size="s" %}
                         </div>
                     </div>
