Update *_last.html to use deltasince + duration_string

--- a/dashboard/templates/cards/sleep_last.html
+++ b/dashboard/templates/cards/sleep_last.html
@@ -9,7 +9,7 @@
 
 {% block title %}
     {% if sleep %}
-        {% blocktrans trimmed with since=sleep.end|timesince time=sleep.end|time %}
+        {% blocktrans trimmed with since=sleep.end|deltasince|duration_string:'m' time=sleep.end|time %}
             <div>{{ since }} ago</div>
             <small>{{ time }}</small>
         {% endblocktrans %}
