--- a/dashboard/templates/cards/diaperchange_last.html
+++ b/dashboard/templates/cards/diaperchange_last.html
@@ -1,5 +1,5 @@
 {% extends 'cards/base.html' %}
-{% load i18n %}
+{% load duration i18n %}
 
 {% block header %}
     <a href="{% url "core:diaperchange-list" %}">
@@ -9,7 +9,7 @@
 
 {% block title %}
     {% if change %}
-        {% blocktrans trimmed with since=change.time|timesince time=change.time|time %}
+        {% blocktrans trimmed with since=change.time|deltasince|duration_string:'m' time=change.time|time %}
             <div>{{ since }} ago</div>
             <small>{{ time }}</small>
         {% endblocktrans %}
