--- a/dashboard/templates/cards/feeding_last.html
+++ b/dashboard/templates/cards/feeding_last.html
@@ -1,5 +1,5 @@
 {% extends 'cards/base.html' %}
-{% load i18n %}
+{% load duration i18n %}
 
 {% block header %}
     <a href="{% url "core:feeding-list" %}">
@@ -9,7 +9,7 @@
 
 {% block title %}
     {% if feeding %}
-        {% blocktrans trimmed with since=feeding.start|timesince time=feeding.start|time %}
+        {% blocktrans trimmed with since=feeding.start|deltasince|duration_string:'m' time=feeding.start|time %}
             <div>{{ since }} ago</div>
             <small>{{ time }}</small>
         {% endblocktrans %}
