--- a/babybuddy/templates/babybuddy/user_add_device.html
+++ b/babybuddy/templates/babybuddy/user_add_device.html
@@ -11,34 +11,27 @@
 {% block content %}
     <h1>{% trans "Add a device" %}</h1>
 
-    <p>
-        {% blocktrans trimmed %}
-            This page allows you to gain access to babybuddy from a
-            third party app or device.
-        {% endblocktrans %}
-    </p>
-
     <div class="container-fluid">
+        <legend>{% trans "Authentication Methods" %}</legend>
         <fieldset>
-        <legend>{% trans "Device login options" %}</legend>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">{% trans "Key" %}</label>
-            <div class="col-sm-10">
-                <form method="post">
-                    {% csrf_token %}
-                    <samp>{{ user.settings.api_key }}</samp>
-                    <input type="submit" name="api_key_regenerate" value="{% trans "Regenerate" %}" class="btn btn-danger btn-xs" />
-                </form>
-            </div>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">{% trans "Login QR code" %}</label>
-            <div class="col-sm-10">
-                <div style="display:inline-block;background-color:white;" data-qr-code-content="{{ qr_code_data }}">
-                    {% qr_from_text qr_code_data size="s" %}
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">{% trans "Key" %}</label>
+                <div class="col-sm-10">
+                    <form method="post">
+                        {% csrf_token %}
+                        <samp>{{ user.settings.api_key }}</samp>
+                        <input type="submit" name="api_key_regenerate" value="{% trans "Regenerate" %}" class="btn btn-danger btn-xs" />
+                    </form>
                 </div>
             </div>
-        </div>
-    </fieldset>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">{% trans "Login QR code" %}</label>
+                <div class="col-sm-10">
+                    <div style="display:inline-block;background-color:white;" data-qr-code-content="{{ qr_code_data }}">
+                        {% qr_from_text qr_code_data size="s" %}
+                    </div>
+                </div>
+            </div>
+        </fieldset>
     </div>
 {% endblock %}
