--- a/babybuddy/templates/babybuddy/user_add_device.html
+++ b/babybuddy/templates/babybuddy/user_add_device.html
@@ -5,7 +5,7 @@
 
 {% block breadcrumbs %}
     <li class="breadcrumb-item">{% trans "User" %}</li>
-    <li class="breadcrumb-item active">{% trans "Settings" %}</li>
+    <li class="breadcrumb-item active">{% trans "Add a device" %}</li>
 {% endblock %}
 
 {% block content %}
