--- a/babybuddy/templates/babybuddy/nav-dropdown.html
+++ b/babybuddy/templates/babybuddy/nav-dropdown.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/base.html' %}
-{% load babybuddy_tags i18n static timers %}
+{% load babybuddy i18n static timers %}
 
 {% block nav %}
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
