--- a/babybuddy/templates/babybuddy/user_add_device.html
+++ b/babybuddy/templates/babybuddy/user_add_device.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load i18n widget_tweaks babybuddy_tags qr_code %}
+{% load i18n widget_tweaks babybuddy qr_code %}
 
 {% block title %}{% trans "Add a device" %}{% endblock %}
 
