--- a/babybuddy/templates/error/lockout.html
+++ b/babybuddy/templates/error/lockout.html
@@ -1,5 +1,5 @@
 {% extends 'error/base.html' %}
-{% load babybuddy_tags i18n %}
+{% load babybuddy i18n %}
 
 {% block title %}403 {% trans "Too Many Login Attempts" %}{% endblock %}
 
