--- a/core/templates/core/timer_detail.html
+++ b/core/templates/core/timer_detail.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load babybuddy_tags duration i18n timers %}
+{% load babybuddy duration i18n timers %}
 {% get_child_count as CHILD_COUNT %}
 
 {% block title %}{{ object }}{% endblock %}
