--- a/babybuddy/templates/babybuddy/user_form.html
+++ b/babybuddy/templates/babybuddy/user_form.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load i18n %}
+{% load babybuddy i18n %}
 
 {% block title %}
     {% if object %}
@@ -21,6 +21,17 @@
 
 {% block content %}
     {% if object %}
+        {% user_is_locked object as is_locked %}
+        {% if is_locked %}
+            <div class="alert alert-danger">
+                <div class="alert-heading h4">
+                    {% blocktrans %}User locked.{% endblocktrans %}
+                </div>
+                <a href="{% url 'babybuddy:user-unlock' object.id %}" class="btn btn-danger">
+                    {% blocktrans %}Unlock{% endblocktrans %}
+                </a>
+            </div>
+        {% endif %}
         {% blocktrans trimmed %}
             <h1>Update <span class="text-info">{{ object }}</span></h1>
         {% endblocktrans %}
