Add a last pumping dashboard card

--- a/dashboard/static_src/scss/cards.scss
+++ b/dashboard/static_src/scss/cards.scss
@@ -48,7 +48,8 @@
     }
 }
 
-.card-feeding {
+.card-feeding,
+.card-pumping {
     border-color: theme-color('primary');
 
     .card-header, .card-header a {
