--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -15,6 +15,7 @@
     <div id="dashboard-child" class="card-columns">
         {% card_timer_list object %}
         {% card_feeding_last object %}
+        {% card_pumping_last object %}
         {% card_diaperchange_last object %}
         {% card_sleep_last object %}
         {% card_feeding_last_method object %}
