Upgrade to Bootstrap 5 (#479)
* Update Tempus Dominus to v6 (WIP)

* Re-add calendar input prepend container

* Normalize setting of default date values

* Migrate to Bootstrap 5 (WIP)

* Remove deprecated card columns implementation from dashboard

* Update BS5 data props

* Use Masonry layout for dashboard cards (for now)

This doesn't seem particularly ideal so may need a more involved refactor

* Update styles for Bootstrap 5 deprecations

* Remove resolutions crap

* Refactor deprecated BS4 classes

* Update list table styles

* Refactor deprecated jumbotron class usages

* Update close button structure

* Add `v2` branch to standard CI workflows

--- a/babybuddy/templates/registration/password_reset_form.html
+++ b/babybuddy/templates/registration/password_reset_form.html
@@ -17,13 +17,11 @@
     <form method="post">
         {% csrf_token %}
 
-        <label class="sr-only" for="email-input-group">
+        <label class="visually-hidden" for="email-input-group">
             {{ form.email.label }}
         </label>
         <div class="input-group mb-3 fade-in">
-            <div class="input-group-prepend">
-                <span class="input-group-text"><i class="icon-mail" aria-hidden="true"></i></span>
-            </div>
+            <span class="input-group-text text-muted"><i class="icon-mail" aria-hidden="true"></i></span>
             {% render_field form.email name='email' class+='form-control' id='email-input-group' placeholder=form.email.label %}
         </div>
 
