--- a/core/templates/core/child_detail.html
+++ b/core/templates/core/child_detail.html
@@ -5,7 +5,7 @@
 
 {% block breadcrumbs %}
     <li class="breadcrumb-item"><a href="{% url 'core:child-list' %}">{% trans "Children" %}</a></li>
-    <li class="breadcrumb-item font-weight-bold">
+    <li class="breadcrumb-item fw-bold">
         {% child_quick_switch object 'core:child' %}
     </li>
 {% endblock %}
