--- a/core/templates/core/child_list.html
+++ b/core/templates/core/child_list.html
@@ -18,10 +18,10 @@
     </h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
-        <table class="table table-striped table-hover child-list">
-            <thead class="thead-inverse">
+        <table class="table table-borderless table-striped table-hover align-middle">
+            <thead>
                 <tr>
-                    <th class="picture-column"><i class="icon-camera" aria-hidden="true"></i></th>
+                    <th><i class="icon-camera" aria-hidden="true"></i></th>
                     <th>{% trans "First Name" %}</th>
                     <th>{% trans "Last Name" %}</th>
                     <th>{% trans "Birth Date" %}</th>
@@ -31,8 +31,12 @@
             <tbody>
                 {% for child in object_list %}
                     <tr>
-                        <td class="picture-column">
-                            {% include "core/child_thumbnail.html" %}
+                        <td>
+                            {% if child.picture %}
+                                {% include "core/child_thumbnail.html" %}
+                            {% else %}
+                                <img src="{% static 'babybuddy/img/core/child-placeholder.png' %}" width="40" height="40" class="img-fluid rounded-circle" />
+                            {% endif %}
                         </td>
                         <th scope="row">
                             <a href="{% url 'core:child' child.slug %}">{{ child.first_name }}</a>
