--- a/core/templates/core/widget_tag_editor.html
+++ b/core/templates/core/widget_tag_editor.html
@@ -5,39 +5,31 @@
         {{ k }}="{{ v }}"
     {% endfor %}>
     {% csrf_token %}
-    <span class="prototype-tag btn badge badge-pill cursor-pointer mr-1" style="display: none;">
+    <span class="prototype-tag btn badge badge-pill cursor-pointer me-1" style="display: none;">
         UNINITIALIZED PROTOTYPE
-        <span class="add-remove-icon pl-1 pr-1">+ or -</span>
+        <span class="add-remove-icon ps-1 pe-1">+ or -</span>
     </span>
     <div class="current_tags" style="min-height: 2em;">
         {% for t in widget.value %}
-        <span data-value="{{ t.name }}" data-color="{{ t.color }}" class="tag btn badge badge-pill cursor-pointer mr-1" style="background-color: {{ t.color }};">
+        <span data-value="{{ t.name }}" data-color="{{ t.color }}" class="tag btn badge badge-pill cursor-pointer me-1" style="background-color: {{ t.color }};">
             {{ t.name }}
-            <span class="add-remove-icon pl-1 pr-1">-</span>
+            <span class="add-remove-icon ps-1 pe-1">-</span>
         </span>
         {% endfor %}
     </div>
     <div class="new-tags">
         <div class="create-tag-inputs input-group">
             <input class="form-control" type="text" name="" placeholder="{% trans "Tag name" %}">
-            <div class="input-group-append">
-                <button class="btn btn-outline-primary bg-dark btn-add-new-tag" type="button">{% trans "Add" %}</button>
-            </div>
+            <button id="add-tag" class="btn btn-outline-primary bg-dark" type="button">{% trans "Add" %}</button>
         </div>
         {% if widget.tag_suggestions.quick %}
             <span>{% trans "Recently used:" %}</span>
             {% for t in widget.tag_suggestions.quick %}
-            <span data-value="{{ t.name }}" data-color="{{ t.color }}" class="tag btn badge badge-pill cursor-pointer mr-1" style="background-color: {{ t.color }};">
+            <span data-value="{{ t.name }}" data-color="{{ t.color }}" class="tag btn badge badge-pill cursor-pointer me-1" style="background-color: {{ t.color }};">
                 {{ t.name }}
-                <span class="add-remove-icon pl-1 pr-1">+</span>
+                <span class="add-remove-icon ps-1 pe-1">+</span>
             </span>
             {% endfor %}
-        {% else %}
-            <style>
-                .help-block{
-                    display: none;
-                }
-            </style>
         {%endif%}
     </div>
     <input 
@@ -51,7 +43,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">{% trans "Error" context "Error modal" %}</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
             
                 <div class="modal-body">
@@ -62,7 +54,7 @@
                 </div>
                 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
                         {% trans "Close" context "Error modal" %}
                     </button>
                 </div>
