Adjust for changes from main rebase

--- a/babybuddy/templates/babybuddy/nav-dropdown.html
+++ b/babybuddy/templates/babybuddy/nav-dropdown.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-target="#navbar-app" aria-controls="navbar-app"
+                    data-bs-target="#navbar-app" aria-controls="navbar-app"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
