--- a/core/templates/core/quick_timer_nav.html
+++ b/core/templates/core/quick_timer_nav.html
@@ -26,7 +26,7 @@
             </div>
         </div>
     {% else %}
-        <label class="sr-only">{% trans "Quick Start Timer" %}</label>
+        <label class="visually-hidden">{% trans "Quick Start Timer" %}</label>
         <button class="btn m-0 p-0 text-success">
             <i class="icon-2x icon-timer" aria-hidden="true"></i>
         </button>
