--- a/dashboard/templates/cards/pumping_last.html
+++ b/dashboard/templates/cards/pumping_last.html
@@ -9,7 +9,7 @@
 
 {% block title %}
     {% if pumping %}
-        {% blocktrans trimmed with since=pumping.time|deltasince|duration_string:'m' time=pumping.time|time %}
+        {% blocktrans trimmed with since=pumping.start|deltasince|duration_string:'m' time=pumping.start|time %}
             <div>{{ since }} ago</div>
             <small>{{ time }}</small>
         {% endblocktrans %}
