update field references in pumping_list

--- a/core/templates/core/pumping_list.html
+++ b/core/templates/core/pumping_list.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load datetime i18n widget_tweaks %}
+{% load datetime duration i18n widget_tweaks %}
 
 {% block title %}{% trans "Pumping" %}{% endblock %}
 
@@ -27,6 +27,7 @@
                         <th>{% trans "Child" %}</th>
                     {% endif %}
                     <th>{% trans "Amount" %}</th>
+                    <th>{% trans "Duration" %}</th>
                     <th>{% trans "Tags" %}</th>
                 </tr>
             </thead>
@@ -50,23 +51,24 @@
 
                             </div>
                         </td>
-                        <th scope="row">{{ pumping.time|datetime_short }}</th>
+                        <th scope="row">{{ pumping.start|datetime_short }}</th>
                         {% if not unique_child %}
                             <td><a href="{% url 'core:child' pumping.child.slug %}">{{ pumping.child }}</a></td>
                         {% endif %}
                         <td>{{ pumping.amount }}</td>
+                        <td>{{ pumping.duration|duration_string }}</td>
                         <td>
                             {% include "core/render_tag_list.html" with tags=pumping.tags.all %}
                         </td>
                     </tr>
                     {% if pumping.notes %}
                         <tr class="{{ row_class }} row-details">
-                            <td colspan="4"><i class="icon-note me-2" aria-hidden="true"></i>{{ pumping.notes }}</td>
+                            <td colspan="5"><i class="icon-note me-2" aria-hidden="true"></i>{{ pumping.notes }}</td>
                         </tr>
                     {% endif %}
                 {% empty %}
                     <tr>
-                        <th colspan="4">{% trans "No pumping entries found." %}</th>
+                        <th colspan="5">{% trans "No pumping entries found." %}</th>
                     </tr>
                 {% endfor %}
             </tbody>
