fix for /pull/665#discussion_r1250140997

--- a/core/templates/core/pumping_list.html
+++ b/core/templates/core/pumping_list.html
@@ -22,7 +22,7 @@
             <thead>
                 <tr>
                     <th>{% trans "Actions" %}</th>
-                    <th>{% trans "Time" %}</th>
+                    <th>{% trans "Date" %}</th>
                     {% if not unique_child %}
                         <th>{% trans "Child" %}</th>
                     {% endif %}
